kubernetes/apps/default/echo/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: http
